<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".learn">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">



        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="136dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="150dp"
            android:text="@string/content1"
            android:textAlignment="center"
            android:textColor="@color/redish"
            android:textSize="24sp"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/content2"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />
        <TextView
            android:id="@+id/content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content3"
            android:layout_below="@id/content2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="80dp"
            android:textColor="@color/redish"
            android:textSize="24sp"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/content4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content4"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/content3"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content5"
                android:layout_below="@+id/content4"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                android:textColor="@color/redish"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content6"
                android:layout_below="@+id/content5"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content7"
                android:layout_below="@+id/content6"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                android:textColor="@color/redish"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/content8"
                android:layout_below="@+id/content7"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:textColor="#000"
                android:textSize="24sp"
                android:layout_marginBottom="100dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>





</LinearLayout>