<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:weightSum="2">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/name"
            android:textSize="21sp"
            android:textStyle="bold" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="21sp"
        android:id="@+id/name"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/grade"
            android:textSize="21sp"
            android:textStyle="bold" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="21sp"
        android:id="@+id/grade" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkDetails"
            android:visibility="invisible"
            android:background="@drawable/btn_rounded"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:text="@string/check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="right"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY" />

    </LinearLayout>

</LinearLayout>